src/examples/valid/dataframe.ra
func main(): void {
  dataframe = read_csv("song_data_clean.csv");
  col = "danceability";

  print(average(dataframe, "song_duration_ms"));
  print(std(dataframe, col));
  print(median(dataframe, col));
  print(variance(dataframe, col));

  print(correlation(dataframe, col, "song_duration_ms"));
}
