src/examples/invalid/dynamic/used-before.ra
func main(): void {
  print(col);
  col = "danceability";
}
